# futureself

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Dockerfile.agent  agent.yaml  azure.yaml  docker-compose.yml  futureself-spec.md  main.py  pyproject.toml  simulate.py
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/skills/implement-futureself-specialized-agent/: SKILL.md
.github/skills/implement-futureself-specialized-agent/references/: orchestrator-flow.md  schemas.md
.github/workflows/: ci.yml  deploy.yml  live.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_cascade_deletes.py  0003_add_user_oid.py  0004_add_messages.py  0005_filtered_oid_unique.py  0006_add_user_auth.py  0007_add_whatsapp.py
config/: routing.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BiomarkerHistory.tsx  ChatInterface.tsx  ChatMessage.tsx  CuratorBanner.tsx  FactsDialog.tsx  SettingsMenu.tsx  TypingIndicator.tsx  WelcomeScreen.tsx
frontend/src/lib/: api.ts  mockResponses.ts
frontend/src/pages/: Blueprint.tsx  Index.tsx  Login.tsx  Onboarding.tsx
infra/: grant-bff-foundry-role.sh
infra/azure/: main.bicep
prompts/: financial.md  geopolitics.md  mental_health.md  orchestrator.md  physical_health.md  social_relations.md  time_management.md
scenarios/: burnout_and_debt.yaml  crisis_mental_health.yaml  exercise_no_time.yaml  motorcycle_purchase.yaml  relocation_decision.yaml
src/futureself/: blueprint_quality.py  eval.py  judge.py  orchestrator.py  schemas.py  telemetry.py
src/futureself/agents/: __init__.py  _base.py  financial.py  geopolitics.py  mental_health.py  physical_health.py  social_relations.py  time_management.py
src/futureself/db/: engine.py  models.py
src/futureself/llm/: __init__.py  anthropic_provider.py  azure_foundry_provider.py  google_provider.py  openai_provider.py  provider.py  router.py  router_config.py
src/futureself/skills/financial/: SKILL.md
src/futureself/skills/geopolitics/: SKILL.md
src/futureself/skills/mental-health/: SKILL.md
src/futureself/web/: agent_client.py  app.py  auth.py  curator.py  facts.py  passwords.py  security.py  session.py  templates_config.py  whatsapp.py
tests/: conftest.py  test_blueprint_quality.py  test_eval.py  test_judge.py  test_orchestrator.py  test_telemetry.py
tests/agents/: test_agent_contract.py
tests/llm/: test_azure_foundry_provider.py  test_provider_edge_cases.py  test_router.py  test_routing_integration.py
tests/scenarios/: test_scenarios.py
tests/web/: conftest.py  test_agent_client.py  test_auth.py  test_blueprint_editing.py  test_curator.py  test_email_auth.py  test_memory_lifecycle.py  test_routes.py  test_security.py  test_session.py  test_whatsapp.py
(+17 files in other folders)
